# lcbo-scraper

./: .gitignore  README.md  pyproject.toml
src/lcbo_scraper/: __init__.py  main.py  models.py  scraper.py
